Introduce GC logging and file rotation
this won't take more than 10Mb of disk space so should be safe everywhere